# zmk-config

./: .gitmodules  README.md  draw.py
.github/workflows/: build.yml
config/: 3x5+2.keymap  cradio.conf  cradio.keymap  cradio_callum.keymap  old.keymap
parser/: __main__.py  draw.py  keyboard.py  parse.py  pyproject.toml
