[tool.poetry]
name = "zmk_parser"
version = "0.1.0"
description = ""
authors = ["leiserfg <leiserfg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tree_sitter = "*"
pcpp = "^1.30"
ipython = "^8.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
